// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty matches snapshot with custom icon, action label, and onAction 1`] = `
[
  <View
    aria-label="Notifications (F8)"
    pointerEvents="box-none"
    role="region"
    style={
      {
        "bottom": 0,
        "flexDirection": "column",
        "left": 0,
        "maxWidth": "100%",
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 100000,
      }
    }
    tabIndex={-1}
  >
    <View
      focusable={false}
      pointerEvents="box-none"
      style={
        {
          "flexDirection": "column",
          "maxWidth": "100%",
          "position": "absolute",
        }
      }
    />
  </View>,
  <View
    role="alert"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "white",
        "flexDirection": "column",
        "gap": 8,
        "height": 400,
        "justifyContent": "center",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="24"
      bbWidth="24"
      fill="none"
      focusable={false}
      height="24"
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      testID="custom-icon"
      vbHeight={24}
      vbWidth={24}
      width="24"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
          ]
        }
        stroke={
          {
            "type": 2,
          }
        }
      >
        <RNSVGPath
          d="M18 6 6 18"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        />
        <RNSVGPath
          d="m6 6 12 12"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        {
          "color": "#1c2a3a",
          "fontFamily": "Inter_600SemiBold",
          "fontSize": 20,
          "lineHeight": 30,
        }
      }
      suppressHighlighting={true}
    >
      Empty List
    </Text>
    <Text
      style={
        {
          "color": "#111928",
          "fontFamily": "Inter_400Regular",
          "fontSize": 14,
          "lineHeight": 21,
          "textAlign": "center",
        }
      }
      suppressHighlighting={true}
    >
      Add a new item to get started.
    </Text>
    <View
      focusVisibleStyle={{}}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#1c2a3a",
          "borderBottomColor": "transparent",
          "borderBottomLeftRadius": 60,
          "borderBottomRightRadius": 60,
          "borderBottomWidth": 1,
          "borderLeftColor": "transparent",
          "borderLeftWidth": 1,
          "borderRightColor": "transparent",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "borderTopColor": "transparent",
          "borderTopLeftRadius": 60,
          "borderTopRightRadius": 60,
          "borderTopWidth": 1,
          "color": "#ffffff",
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "fontWeight": "500",
          "height": 48,
          "justifyContent": "center",
          "opacity": 1,
          "paddingBottom": 12,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 12,
          "width": 250,
        }
      }
    >
      <Text
        lineBreakMode="clip"
        numberOfLines={1}
        style={
          {
            "color": "#ffffff",
            "flexGrow": 0,
            "flexShrink": 1,
            "fontFamily": "Inter_500Medium",
            "fontSize": 14,
            "lineHeight": 21,
            "userSelect": "none",
          }
        }
        suppressHighlighting={true}
      >
        Add Item
      </Text>
    </View>
  </View>,
]
`;

exports[`Empty matches snapshot with custom title and description 1`] = `
[
  <View
    aria-label="Notifications (F8)"
    pointerEvents="box-none"
    role="region"
    style={
      {
        "bottom": 0,
        "flexDirection": "column",
        "left": 0,
        "maxWidth": "100%",
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 100000,
      }
    }
    tabIndex={-1}
  >
    <View
      focusable={false}
      pointerEvents="box-none"
      style={
        {
          "flexDirection": "column",
          "maxWidth": "100%",
          "position": "absolute",
        }
      }
    />
  </View>,
  <View
    role="alert"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "white",
        "flexDirection": "column",
        "gap": 8,
        "height": 400,
        "justifyContent": "center",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="24"
      bbWidth="24"
      color="$gray10"
      fill="none"
      focusable={false}
      height="24"
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width="24"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "type": 2,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth="2"
      >
        <RNSVGCircle
          cx="12"
          cy="12"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          r="10"
        />
        <RNSVGPath
          d="m4.9 4.9 14.2 14.2"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        {
          "color": "#1c2a3a",
          "fontFamily": "Inter_600SemiBold",
          "fontSize": 20,
          "lineHeight": 30,
        }
      }
      suppressHighlighting={true}
    >
      No Results
    </Text>
    <Text
      style={
        {
          "color": "#111928",
          "fontFamily": "Inter_400Regular",
          "fontSize": 14,
          "lineHeight": 21,
          "textAlign": "center",
        }
      }
      suppressHighlighting={true}
    >
      No items found matching your query.
    </Text>
  </View>,
]
`;

exports[`Empty matches snapshot with default props 1`] = `
[
  <View
    aria-label="Notifications (F8)"
    pointerEvents="box-none"
    role="region"
    style={
      {
        "bottom": 0,
        "flexDirection": "column",
        "left": 0,
        "maxWidth": "100%",
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 100000,
      }
    }
    tabIndex={-1}
  >
    <View
      focusable={false}
      pointerEvents="box-none"
      style={
        {
          "flexDirection": "column",
          "maxWidth": "100%",
          "position": "absolute",
        }
      }
    />
  </View>,
  <View
    role="alert"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "white",
        "flexDirection": "column",
        "gap": 8,
        "height": 400,
        "justifyContent": "center",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="24"
      bbWidth="24"
      color="$gray10"
      fill="none"
      focusable={false}
      height="24"
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width="24"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "type": 2,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth="2"
      >
        <RNSVGCircle
          cx="12"
          cy="12"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          r="10"
        />
        <RNSVGPath
          d="m4.9 4.9 14.2 14.2"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        {
          "color": "#1c2a3a",
          "fontFamily": "Inter_600SemiBold",
          "fontSize": 20,
          "lineHeight": 30,
        }
      }
      suppressHighlighting={true}
    >
      No Data
    </Text>
  </View>,
]
`;

exports[`Empty matches snapshot without description and action 1`] = `
[
  <View
    aria-label="Notifications (F8)"
    pointerEvents="box-none"
    role="region"
    style={
      {
        "bottom": 0,
        "flexDirection": "column",
        "left": 0,
        "maxWidth": "100%",
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 100000,
      }
    }
    tabIndex={-1}
  >
    <View
      focusable={false}
      pointerEvents="box-none"
      style={
        {
          "flexDirection": "column",
          "maxWidth": "100%",
          "position": "absolute",
        }
      }
    />
  </View>,
  <View
    role="alert"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "white",
        "flexDirection": "column",
        "gap": 8,
        "height": 400,
        "justifyContent": "center",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="24"
      bbWidth="24"
      color="$gray10"
      fill="none"
      focusable={false}
      height="24"
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width="24"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "type": 2,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth="2"
      >
        <RNSVGCircle
          cx="12"
          cy="12"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          r="10"
        />
        <RNSVGPath
          d="m4.9 4.9 14.2 14.2"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        {
          "color": "#1c2a3a",
          "fontFamily": "Inter_600SemiBold",
          "fontSize": 20,
          "lineHeight": 30,
        }
      }
      suppressHighlighting={true}
    >
      No Content
    </Text>
  </View>,
]
`;
